# speakQuery

./: .bandit  .dockerignore  .env.example  .flake8  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  app.py  build_custom_components.py  ci_setup.sh  describe_indexes.py  dev_docker_quick_reset.sh  docker-compose.yml  environment.yml  history.db  macos_requirements.txt  pytest.ini  requirements-dev.txt  requirements.txt  run_all.sh  saved_search_history.db  saved_searches.db  scheduled_inputs.db  scheduled_inputs_history.db  setup.sh  sitecustomize.py  ubuntu_requirements.txt
archive/: __test.py  _create_test_systemlogs_parquets.py  _test0.py  _test1.py  _test2.py  describe_frontend.sh  index_call.py  query_parser.py  query_pipeline.py
config/: environment.yml  requirements.txt
describe/: describe_frontend.sh
design/: initial_design_specifications_rough_draft.txt
devtools/: __init__.py  debug_attach.py
docs/: api.md  manual_tests.yaml  pycharm_debugging.md  syntax.md
executed_scheduled_searches/: 1725816960.b3e225e8-6976-4121-be4f-52a84cc8218d.parquet
functionality/: FindNextCron.py  ParquetEpochAdder.py  so_loader.py
functionality/cpp_datetime_parser/: CMakeLists.txt
functionality/cpp_datetime_parser/src/: cpp_datetime_parser.cpp
functionality/cpp_index_call/: CMakeLists.txt
functionality/cpp_index_call/src/: cpp_index_call.cpp
handlers/: AppendHandler.py  Base64Handler.py  BinHandler.py  ChartHandler.py  DedupHandler.py  EvalHandler.py  FieldsHandler.py  FillnullHandler.py  GeneralHandler.py  (+19 more)
(+400 files in other folders)
